--- a/lab 5/client/package.json
+++ b/lab 5/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.11",
     "marked": "^0.6.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.4"
